# thinc-sleef-ops

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
array_ops/: CMakeLists.txt  array.hh  array_impl.hh  array_ops.pxd  array_ops.pyx  cpu_id.pxd  cpu_id.pyx  vector.hh  vector_avx.hh  vector_avx512.hh  vector_sse.hh
cy/: CMakeLists.txt  array_avx.cpp  array_ops.pxd  arrayi.hh  cy.pxd  cy.pyx  sleef_ops.pxd  sleef_ops.pyx
cy/simd_array/: array.cpp  array.hh  array_avx512.cpp  array_base.hh  array_impl.hh  array_neon.cpp  array_sse.cpp  dispatch.cpp  dispatch.hh
cy/simd_vector/: vector.hh  vector_avx512.hh  vector_neon.hh  vector_sse.hh
libcpuid/: CMakeLists.txt
libcpuid/libcpuid/: CMakeLists.txt
thinc_sleef_ops/: CMakeLists.txt  __init__.py  array.hh  sleef.pxd  sleef.pyx  sleef_array.pxd  sleef_array.pyx  sleef_ops.pyx  vector.hh  vector_avx.hh  vector_sse.hh
thinc_sleef_ops/simd_array/: array.hh  array_base.hh  array_impl.hh  array_scalar.cpp  dispatch.cpp
thinc_sleef_ops/simd_vector/: vector.hh  vector_avx.hh  vector_avx512.hh  vector_neon.hh  vector_sse.hh
thinc_sleef_ops/tests/: test_ops.py
